--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,8 @@
        {webmachine, ".*",
         {git, "git://github.com/basho/webmachine", {branch, "master"}}},
        {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "master"}}}
+        {git, "git://github.com/basho/riak_core", {branch, "master"}}},
+       {erlydtl, ".*",
+        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
        ]}.
 
